--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "loan-tracking-system": "file:",
-    "mongoose": "^7.6.0"
+    "mongoose": "^7.6.0",
+    "nodemon": "^3.1.10"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
